# service-system

./: .gitignore  README.md  add_company.ps1  biome.json  create_new_database.ps1  dev.ps1  remove_company.ps1
backend/: Cargo.toml
backend/src/: auth.rs  auth_old.rs  config.rs  facility.rs  machine.rs  main.rs  router.rs  task.rs  user.rs
backend/src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs
backend/src/channels/: listeners.rs  mod.rs  setup.rs
backend/src/machines/: handlers.rs  mod.rs  models.rs
backend/src/machines/facilities/: handlers.rs  mod.rs  models.rs
backend/src/machines/machine_statuses/: handlers.rs  mod.rs  models.rs
backend/src/machines/machine_types/: handlers.rs  mod.rs  models.rs
backend/src/reports/: handlers.rs  mod.rs  models.rs
backend/src/reports/report_documents/: mod.rs  models.rs
backend/src/reports/report_statuses/: handlers.rs  mod.rs  models.rs
backend/src/reports/report_types/: handlers.rs  mod.rs  models.rs
backend/src/roles/: handlers.rs  mod.rs  models.rs
backend/src/tasks/: handlers.rs  mod.rs  models.rs
backend/src/tasks/task_documents/: mod.rs  models.rs
backend/src/tasks/task_executors/: handlers.rs  mod.rs  models.rs
backend/src/tasks/task_statuses/: handlers.rs  mod.rs  models.rs
backend/src/tasks/task_types/: handlers.rs  mod.rs  models.rs
backend/src/users/: handlers.rs  mod.rs  models.rs
backend/src/users/roles/: handlers.rs  mod.rs  models.rs
backend/src/utils/: errors.rs  macros.rs  misc.rs  mod.rs  tracing.rs
backend/src/utils/db/: field.rs  mod.rs  nullable.rs
frontend/: biome.json  components.json  index.html  jsconfig.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
frontend/src/: App.svelte  Footer.svelte  Header.svelte  Sidebar.svelte  app.css  custom.css  main.js
frontend/src/lib/: Header.svelte  helpers.js  stores.js  utils.js
frontend/src/lib/components/: Header.svelte  Sidebar.svelte  TaskItem.svelte  TypeStatusCard.svelte  UserNav.svelte
frontend/src/old/tasks/: tasks.svelte
frontend/src/routes/: Account.svelte  Login.svelte  Mainmenu.svelte  NotFound.svelte  account.svelte  home.svelte  login.svelte  machines.svelte  notFound.svelte  tasks.svelte  users.svelte
frontend/src/routes/facilities/: facilities.svelte
frontend/src/routes/machine/: machine.svelte
frontend/src/routes/machines/: Machine.svelte  Machines.svelte  NewMachines.svelte  createMachine.svelte  machine.svelte  machines.svelte
frontend/src/routes/mainmenu/: Mainmenu.svelte
frontend/src/routes/report/: report.svelte
frontend/src/routes/reports/: reports.svelte
frontend/src/routes/roles/: roles.svelte
old_frontend/: .prettierrc  index.html  package.json  vite.config.js
old_frontend/src/: App.svelte  Footer.svelte  Header.svelte  Sidebar.svelte
old_frontend/src/lib/: stores.js  utils.js
old_frontend/src/routes/: Account.svelte  account.svelte  login.svelte  notFound.svelte
structure/: MySQL To Rust Types.txt  Tables.ods  User Stories.odt
structure/tables/: facility.sql  machine.sql  machines.sql  procedures.sql  report.sql  reports.sql  role.sql  roles.sql  task.sql  tasks.sql  user.sql  users.sql  worker.sql
(+222 files in other folders)
