[package]
name = "service-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }

serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"

dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "postgres", "uuid", "chrono"] }

chrono = { version = "0.4.34", features = ["serde"] }
jsonwebtoken = "9.2.0"
axum-extra = { version = "0.9.2", features = ["cookie"] }
tower-http = { version = "0.5.1", features = ["cors", "fs"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
argon2 = "0.5.3"
time = "0.3.20"
rand_core = { version = "0.6.4", features = ["std"] }
validator = { version = "0.18.1", features = ["derive"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"